Fixes articles blog list link to article text. It has to wrap by white spaces, if the text is too long.

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -9,7 +9,6 @@
       a{
         margin-top: 2px;
         display: block;
-        white-space: nowrap;
         text-decoration: none;
 
         &:before{
